fix(list): fix list item spacing (#598)
affects: @gio-design/components, website

--- a/packages/components/src/components/list/style/option.less
+++ b/packages/components/src/components/list/style/option.less
@@ -84,13 +84,23 @@
   &.group {
     padding: 0 15px 0 15px;
     font-size: 12px;
-    line-height: inherit;
+    line-height: 20.5px;
   }
 
   &.group:not(:nth-child(1)) {
-    border-top: 1px solid #ebedf5;
+    border-top: 0;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+  }
+
+  &.group:not(:nth-child(1))::before {
+    position: absolute;
+    top: 4px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #ebedf5;
+    content: '';
   }
 
   &.indented {
